[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://src/Settings.gd" type="Script" id=2]

[node name="PanelContainer" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 228.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0901961, 0.0823529, 0.121569, 0.878431 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Grid" type="GridContainer" parent="Margin"]
margin_right = 560.0
margin_bottom = 388.0
columns = 2

[node name="Label" type="Label" parent="Margin/Grid"]
margin_top = 5.0
margin_right = 271.0
margin_bottom = 30.0
text = "Path"
align = 2

[node name="TextEdit" type="LineEdit" parent="Margin/Grid"]
margin_left = 275.0
margin_right = 560.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="cbRandom" type="CheckBox" parent="Margin/Grid"]
margin_top = 39.0
margin_right = 271.0
margin_bottom = 87.0
size_flags_vertical = 4
text = "Randomize Images"

[node name="cbOntop" type="CheckBox" parent="Margin/Grid"]
margin_left = 275.0
margin_top = 39.0
margin_right = 560.0
margin_bottom = 87.0
pressed = true
text = "On Top"

[node name="cbRecursive" type="CheckBox" parent="Margin/Grid"]
margin_top = 91.0
margin_right = 271.0
margin_bottom = 139.0
pressed = true
text = "Recursive scan"

[node name="cbFullscreen" type="CheckBox" parent="Margin/Grid"]
margin_left = 275.0
margin_top = 91.0
margin_right = 560.0
margin_bottom = 139.0
text = "Fullscreen"

[node name="cbRandomTime" type="CheckBox" parent="Margin/Grid"]
margin_top = 143.0
margin_right = 271.0
margin_bottom = 191.0
disabled = true
pressed = true
text = "Randomize cell timeout"

[node name="cbNames" type="CheckBox" parent="Margin/Grid"]
margin_left = 275.0
margin_top = 143.0
margin_right = 560.0
margin_bottom = 191.0
disabled = true
text = "Show names"

[node name="cbOpt" type="CheckBox" parent="Margin/Grid"]
margin_top = 195.0
margin_right = 271.0
margin_bottom = 243.0
disabled = true
text = "Detect ratio"

[node name="cbProgress" type="CheckBox" parent="Margin/Grid"]
margin_left = 275.0
margin_top = 195.0
margin_right = 560.0
margin_bottom = 243.0
disabled = true
text = "Show timer progress"

[node name="HBoxDelay" type="HBoxContainer" parent="Margin/Grid"]
margin_top = 247.0
margin_right = 271.0
margin_bottom = 282.0

[node name="Sec" type="SpinBox" parent="Margin/Grid/HBoxDelay"]
margin_right = 74.0
margin_bottom = 35.0
min_value = 2.0
value = 2.0
align = 1

[node name="Label" type="Label" parent="Margin/Grid/HBoxDelay"]
margin_left = 78.0
margin_top = 5.0
margin_right = 216.0
margin_bottom = 30.0
text = "Delay, seconds"
valign = 1

[node name="Open" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -49.0
margin_top = 21.0
margin_right = -22.0
margin_bottom = 52.0
text = "..."

[node name="ImagesLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -40.0
margin_right = -68.0
margin_bottom = -15.0
text = "Images:"

[node name="ImagesCount" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -40.0
margin_right = -12.0
margin_bottom = -15.0
text = "0"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -200.0
margin_right = 250.0
margin_bottom = 200.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a Directory"
mode = 2
access = 2
filters = PoolStringArray( "*.folders" )
